# ContactNet

./: .gitignore  ContactNet.ipynb  PatchNet.py  README.md  config.py  data_maker.py  decay_class.py  dock_layers.py  docking.ipyb  docking.ipynb  generators.py  get_patches.py  helper.py  model_evaluate.py  patch_extractor.py  plot_distogram.py  predict_prot.py  preprocessing.py
dssp/: dssp  mkdssps
src/ComplexDistogram/: Atom.cc  Atom.h  CMakeLists.txt  Matrix3.cc  Matrix3.h  Molecule.h  PDB.cc  PDB.h  RigidTrans3.cc  RigidTrans3.h  Rotation3.cc  Rotation3.h  Vector3.h  complex_distogram_maker  complex_distogram_maker.cpp
src/SelfDistogram/: CMakeLists.txt  distogram_maker.cpp
test/: soap_score_nano0.res
weights/: mymodel_108.index  mymodel_116.index  mymodel_9.index
